--- a/app/Views/templates/header.html
+++ b/app/Views/templates/header.html
@@ -33,10 +33,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="https://github.com/mathmed">By: @mathmed</a>
+                <a target = "_blank" class="nav-link" href="https://github.com/mathmed">By: @mathmed</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">See code</a>
+                <a target = "_blank" class="nav-link" href="https://github.com/mathmed/crud-codeigniter4">See code</a>
             </li>
         </ul>
     </div>
